title 및 edit url 수정

--- a/config/_default/languages.ko.toml
+++ b/config/_default/languages.ko.toml
@@ -3,7 +3,7 @@ languageName = "한국어"
 languageDirection = "ltr"
 weight = 1
 
-title = "Woong과 함께!"
+title = "With Woong :rocket:"
 copyright = "&copy; 2024 Congo contributors"
 
 [params]
