--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -42,7 +42,7 @@ fingerprintAlgorithm = "sha256"
   showBreadcrumbs = true
   showDraftLabel = true
   showEdit = true
-  editURL = "https://github.com/with-woong/with-woong.github.io/"
+  editURL = "https://github.com/with-woong/with-woong.github.io/content"
   editAppendPath = true
   showHeadingAnchors = true
   showPagination = true
