--- a/config/_default/menus.ko.toml
+++ b/config/_default/menus.ko.toml
@@ -27,7 +27,7 @@
 
 [[main]]
   name = "GitHub"
-  url = "https://github.com/with-woong"
+  url = "https://github.com/coldwoong-moon"
   weight = 40
   [main.params]
     icon = "github"
