🎨 Add wave-themed favicon/logo and Git hooks
- Created new wave-themed favicon and logos with transparent background
- Implemented Git pre-commit and pre-push hooks to check remote updates
- Added GitHub Actions workflow for automatic thumbnail generation
- Created Python scripts for SVG to PNG/ICO conversion
- Updated Hugo partials for favicon integration
- Added custom CSS and various theme customizations

--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -7,7 +7,9 @@
 
 [highlight]
   noClasses = false
+  style = "github"
+  lineNos = false
 
 [tableOfContents]
   startLevel = 2
-  endLevel = 3
+  endLevel = 4
