--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,12 +9,6 @@
   "markdown.preview.breaks": true,
   "markdown.extension.toc.levels": "2..6",
   "[markdown]": {
-    "editor.wordWrap": "on",
-    "editor.quickSuggestions": {
-      "comments": "on",
-      "strings": "on",
-      "other": "on"
-    },
     "editor.formatOnSave": false,
     "editor.rulers": [80],
     "editor.tabSize": 2
@@ -59,5 +53,8 @@
     "public/**": true,
     "resources/**": true,
     "themes/**": true
-  }
+  },
+  "cSpell.words": [
+    "Newtonsoft"
+  ]
 }
