--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -20,8 +20,8 @@ fingerprintAlgorithm = "sha256"
 
 [header]
   layout = "hybrid" # valid options: basic, hamburger, hybrid, custom
-  # logo = "img/logo.jpg"
-  # logoDark = "img/dark-logo.jpg"
+  logo = "img/logo.svg"
+  logoDark = "img/logo-dark.svg"
   showTitle = true
 
 [footer]
@@ -33,7 +33,7 @@ fingerprintAlgorithm = "sha256"
 [homepage]
   layout = "profile" # valid options: page, profile, custom
   showRecent = true
-  recentLimit = 5
+  recentLimit = 3
 
 [article]
   showDate = true
