🔍 Improve SEO settings and remove update dates
- Fix baseURL to https://coldwoong-moon.github.io/
- Add site description and keywords for better SEO
- Enable robots meta tag with 'index, follow'
- Remove 'updated' date display from both articles and lists
- Sitemap and robots.txt now generate with correct URLs

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@
 # https://jpanther.github.io/congo/docs/getting-started/
 
 theme = "congo"
-baseURL = "/"
+baseURL = "https://coldwoong-moon.github.io/"
 languageCode = "ko"
 defaultContentLanguage = "ko"
 
