--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,13 +9,17 @@ colorScheme = "sapphire"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
+# SEO settings
+description = "개발자 coldwoong의 기술 블로그입니다. C#, .NET, 웹 개발, 프로그래밍 팁과 경험을 공유합니다."
+keywords = ["개발자", "프로그래밍", "C#", ".NET", "웹개발", "기술블로그", "소프트웨어", "개발팁"]
+
 enableSearch = true
 enableCodeCopy = true
 enableImageLazyLoading = true
 enableImageWebp = true
 enableQuicklink = true
 
-# robots = ""
+robots = "index, follow"
 fingerprintAlgorithm = "sha256"
 
 [header]
@@ -59,6 +63,7 @@ fingerprintAlgorithm = "sha256"
   showSummary = false
   showTableOfContents = true
   showTaxonomies = true
+  showDateUpdated = false
   groupByYear = true
   paginationWidth = 1
 
